	common/src/tool-cmdline-common.h and
	common/src/tool-cmdline-common.c.  Merge into toolcommon utility
	library.

	* common/src/ipmi-sdr-cache.c: Remove bit-ops library need.

	* common/src/config-util.c: Remove bit-ops library need.

	* common/src/bit-ops.h, common/src/bit-ops.c: Moved into
	libfreeipmi/src and renamed ipmi-bit-ops.h and ipmi-bit-ops.c.

	* Adjust remaining code and Makefiles for file name changes, new
	files, new functions, function name changes, and removals.

	* configure.ac, freeipmi.spec.in, common/src/err-wrappers.h,
	common/src/fiid-wrappers.h, common/src/udm-err-wrappers.h,
	common/src/udm-fiid-wrappers.h: Remove --enable-syslog support.

	* common/src/ipmi-sensor-api.c (system_software_type_desc):
	Removed unused array of strings.

	* common/src/ipmi-sensor-api.c: Add debugging via debug parameter.
	Use internal wrapper functions rather than library wrapper
	functions.

	* ipmi-sensors/: Adjust code for sensor-api change.

	* pef-config/: Remove linking to libsensor.la.

	* Various minor fixes and code cleanup.
		
2007-11-30  Albert Chu <chu11@llnl.gov>

	* configure.ac: Prepare for beta release.

	* Tagged Release-0_5_0_beta3.

2007-11-28  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-ssif-api.c, libfreeipmi/src/ipmi-kcs-api.c:
	Fix logic bugs.
	
2007-11-27  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Fix changelog typo.

	* doc/freeipmi-coding.txt: Various fixes.
	
2007-11-24  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-outofband-hostname-hostranged.man: Fix
	english.
	
2007-11-24  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-kcs-api.c (_ipmi_kcs_cmd_write),
	libfreeipmi/src/ipmi-ssif-api.c (_ipmi_ssif_cmd_write): Fix error
	handling mem-leak corner case.

	* configure.ac: Prepare for beta release.

	* Tagged Release-0_5_0_beta2.

2007-11-24  Dmitry Frolov <frol@nov.net>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.c: Fix FreeBSD
	port compile bug.

2007-11-22  Albert Chu <chu11@llnl.gov>
