@@ -3,7 +3,7 @@ bmc_info_SOURCES=bmc-info-argp.c bmc-info.c
 bmc_info_LDADD = ../../common/src/libtoolcommon.la \
 		 ../../common/src/libpstdout.la \
 		 ../../common/src/libhostrange.la \
-		 ../../common/src/libllnlcommon.la \
+		 ../../common/src/libmiscutils.la \
                  ../../ipmidetect/src/libipmidetect/libipmidetect.la \
 	         ../../libfreeipmi/src/libfreeipmi.la
  
@@ -27,7 +27,7 @@ AM_CPPFLAGS = -I$(srcdir)/../../common/src \
 ../../common/src/libhostrange.la: force-dependency-check
 	$(MAKE) -C $(dir $@) $(notdir $@)
 
-../../common/src/libllnlcommon.la: force-dependency-check
+../../common/src/libmiscutils.la: force-dependency-check
 	$(MAKE) -C $(dir $@) $(notdir $@)
 
 ../../ipmidetect/src/libipmidetect/libipmidetect.la : force-dependency-check
