@@ -4,7 +4,7 @@ ipmi_raw_LDADD = ../../common/src/libtoolcommon.la \
 		 ../../libfreeipmi/src/libfreeipmi.la \
 		 ../../common/src/libpstdout.la \
 		 ../../common/src/libhostrange.la \
-		 ../../common/src/libllnlcommon.la \
+		 ../../common/src/libmiscutils.la \
 		 ../../ipmidetect/src/libipmidetect/libipmidetect.la \
 		 ../../common/src/libfreeipmiportability.la
  
@@ -31,7 +31,7 @@ AM_CPPFLAGS = -I$(srcdir)/../../common/src \
 ../../common/src/libhostrange.la: force-dependency-check
 	$(MAKE) -C $(dir $@) $(notdir $@)
 
-../../common/src/libllnlcommon.la: force-dependency-check
+../../common/src/libmiscutils.la: force-dependency-check
 	$(MAKE) -C $(dir $@) $(notdir $@)
 
 ../../ipmidetect/src/libipmidetect/libipmidetect.la : force-dependency-check
