@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.5.2.2 2007-12-12 23:49:11 chu11 Exp $
+## $Id: Makefile.am,v 1.5.2.3 2007-12-13 01:22:00 chu11 Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -19,14 +19,14 @@ ipmimonitoring_CPPFLAGS = \
 	-I$(srcdir)/../../../libfreeipmi/include
 
 ipmimonitoring_LDADD = \
-	../../../common/src/libllnlcommon.la \
+	../../../common/src/libmiscutils.la \
 	../libipmimonitoring/libipmimonitoring.la \
 	../../../common/src/libpstdout.la \
 	../../../ipmidetect/src/libipmidetect/libipmidetect.la \
 	../../../common/src/libhostrange.la \
 	../../../common/src/libtoolcommon.la
 
-../../../common/src/libllnlcommon.la: force-dependency-check
+../../../common/src/libmiscutils.la: force-dependency-check
 	$(MAKE) -C $(dir $@) $(notdir $@)
 
 ../libipmimonitoring/libipmimonitoring.la: force-dependency-check
