@@ -21,7 +21,7 @@ ipmipower_SOURCES= \
 	wrappers.c
  
 ipmipower_LDADD = \
-	../../common/src/libllnlcommon.la \
+	../../common/src/libmiscutils.la \
 	../../common/src/libtoolcommon.la \
 	../../ipmidetect/src/libipmidetect/libipmidetect.la \
 	../../libfreeipmi/src/libfreeipmi.la
@@ -54,7 +54,7 @@ noinst_HEADERS= \
 	ipmipower_wrappers.h \
 	wrappers.h
  
-../../common/src/libllnlcommon.la: force-dependency-check
+../../common/src/libmiscutils.la: force-dependency-check
 	$(MAKE) -C $(dir $@) $(notdir $@)
 
 ../../common/src/libtoolcommon.la: force-dependency-check
